# debian-home-config

./: .bashrc  .gitignore  .inputrc  .setup_home.sh  .tmux.conf  .viminfo  .vimrc  .zsh_aliases  .zsh_functions  .zshrc  install_docker.sh
.vim/: .netrwhist
debian-dev-base/: create-ecr.sh  debian-dev-base  debian-dev-base-20180716  debian-dev-base.ecr  debian-dev-base.ecr.describe-images  debian-dev-base.ecr.describe-repo  pull-from-ecr.sh
sim-battery/: demo-playbook
sim-battery/compose/aws/: docker-compose.yml  ecs-param.yml
sim-battery/compose/ecs/: install-ecs-debian.sh
sim-battery/compose/local/: docker-compose.yml
sim-battery/cpp-sim-battery/: cpp-sim-battery
sim-battery/cpp-sim-battery/code/: CMakeLists.txt  RunSimulation.cpp
sim-battery/cpp-sim-battery/code/lib/: fakebattery.cpp  fakebattery.h
sim-battery/flask-frontend/: .dockerignore  flask-frontend
sns-flask-app/: address  build-container.sh  sns-flask-app  sns-flask-app.ecr
sns-flask-app/code/: Pipfile  helpers.py  requirements.txt  sns.py
sns-flask-app/scripts/: build-container.sh  push-to-ecr.sh  run-container-on-port.sh
tpz-workshop/: .dockerignore  Dockerfile  playbook
tpz-workshop/code/: app.py  requirements.txt
tpz-workshop/ecr/: tpz-workshop.ecr
tpz-workshop/scripts/: build_image.sh  commit_container.sh  enter_container.sh  enter_pipenv.sh  install_pipenv.sh  pipenv_flask.sh  pipenv_gen_requirements.sh  run_container_on_port.sh
wetty/: Dockerfile
wetty/scripts/: build_wetty.sh  commit_wetty.sh  restart_wetty.sh  start_wetty.sh  stop_wetty.sh
(+32 files in other folders)
